# persistence

./: Makefile  README.md  Readmefirst.txt  commands.txt  fence-inserter.py  install.txt  install_other_tools.txt  introduction.txt  manual.txt  run_test.sh  test_cases.txt
examples/: compare_abstractions.txt~  demo.txt  demo.txt~  example.txt~  example2.txt~  example_paper.txt~  simple_dekker.txt~  trf.c  trf.txt
examples/fence-performance/: fence-performance.txt
examples/fence-performance/tests/: bakery3_musketeer.c  bakery3_persist.c  dekker2_musketeer.c  dekker2_persist.c  lamport2_musketeer.c  lamport2_persist.c  lamport2_trencher.c  nbw_w_wr_musketeer.c  nbw_w_wr_persist.c  nbw_w_wr_trencher.c  r+detour_musketeer.c  r+detour_persist.c  r+detours_musketeer.c  r+detours_persist.c  sb+detours+coherence_musketeer.c  sb+detours+coherence_persist.c  szymanski2_musketeer.c  szymanski2_persist.c  write+r+coherence_persist.c  write+r+coherence_trencher.c  write+r_persist.c  write+r_trencher.c
examples/parameterized/burns/: burns10.c  burns10.txt  burns2.c  burns2.txt  burns3.c  burns3.txt  burns4.c  burns4.txt  burns5.c  burns5.txt  burns6.c  burns6.txt  burns7.c  burns7.txt  burns8.c  burns8.txt  burns9.c  burns9.txt
src/: Benchmarking.cpp  Benchmarking.h  CMakeLists.txt  CMakeLists.txt~  Census.cpp  Census.h  DotPrinter.cpp  DotPrinter.h  Expression.cpp  Expression.h  FenceInsertion.cpp  FenceInsertion.h  Foreach.h  Instruction.h  Kinds.h  NaiveParser.cpp  NaiveParser.cpp~  NaiveParser.h  Parser.h  Persist.cpp  Persist.cpp~  Printer.h  Program.cpp  Program.h  Reduction.cpp  Reduction.h  RobustnessChecking.cpp  RobustnessChecking.h  SortAndUnique.h  SpinModelChecker.cpp  SpinModelChecker.cpp~  SpinModelChecker.h  SpinPrinter.cpp  SpinPrinter.h  SpinPrinter2.cpp  SpinPrinter2.h  State.h  Thread.cpp  Thread.h  Transition.cpp  (+2 more)
(+366 files in other folders)
